--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anime Lover</title>
     <link rel="stylesheet" href="style.css">
+    <!-- <link rel="stylesheet" href="style2.css"> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -55,10 +56,10 @@
         </div1>
         <div2 id="con2">
             <img src="bookD.jpg" alt="">
-            <!-- <img src="book1.webp" alt="">
-            <img src="book1.webp" alt=""> -->
+            <!-- <img src="bookJ.jpeg" alt="">
+            <img src="bookO.jpeg" alt=""> 
             <img src="bookT.jpg" alt="">
-            <img src="bookJ.jpeg" alt="">
+            <img src="bookJ.jpeg" alt=""> -->
         </div2>
     </con>
     <div id="c2">
@@ -111,11 +112,7 @@
         </div2>
   
 
-    </BOX>
-
-
-    
-    
+    </BOX>    
     <page id="page-3">
         <div id="p-31">
             <h3>
